# opencv_course

./: .gitignore
courses/cv_1/assignments/assignment_2/: CMakeLists.txt  image_crop.cpp  readme.txt
courses/cv_1/assignments/assignment_3/: CMakeLists.txt  readme.txt  zooming.cpp
courses/cv_1/assignments/assignment_6/: image_alignment.cpp
courses/cv_1/projects/project_1_3/: CMakeLists.txt
courses/cv_1/projects/project_2/: CMakeLists.txt  blemishRemove.cpp
courses/cv_1/projects/project_3/: CMakeLists.txt  chromaKeying.cpp  documentScanner.cpp  readme.txt
courses/cv_1/week_1/cpp/code/Getting_started_with_images/: CMakeLists.txt
courses/cv_2/week_1/cpp/: CMakeLists.txt
courses/cv_2/week_3/cpp/: CMakeLists.txt  aging.cpp  beardImage.cpp  beardVideo.cpp  clone.cpp  faceswapImage.cpp  fatifyImage.cpp  fatifyVideo.cpp
courses/cv_2/week_5/: Image_Classification_CNN_LibTorch.ipynb
courses/cv_2/week_5/cnn/: CMakeLists.txt  CNN.cpp
courses/cv_2/week_5/feed_forward/: CMakeLists.txt  feedforward.cpp
courses/cv_2/week_5/libtorch-sample-code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sample
courses/cv_2/week_5/linear_regression/: CSVReader.h  linearRegression.cpp
courses/dl_pytorch/assignments/assignment_1/: Gradient-Descent-Assignment.ipynb  NumPy-Assignment.ipynb  PyTorch-Assignment.ipynb
courses/dl_pytorch/assignments/assignment_2/: Adam_Optimizer_Implementation.ipynb  CNN-CIFAR10.ipynb  MSE_vs_MAE.ipynb
courses/dl_pytorch/assignments/assignment_3/: Assignment_Focal_Loss_Implementation.ipynb  Assignment_LinkNet_with_VGG16.ipynb
courses/dl_pytorch/projects/project_1/: Data_and_Pipeline_Check.ipynb  Training_from_scratch.ipynb
courses/dl_pytorch/projects/project_2/: project_2.ipynb  project_2_ver_2.ipynb
courses/dl_pytorch/projects/project_3/: project3_object_detection.ipynb
courses/dl_pytorch/projects/project_4/: semantic_segmentation.ipynb
courses/dl_pytorch/week_1/: Gradient_Descent.ipynb
courses/dl_pytorch/week_11/: Instance_Segmentation_using_Mask_RCNN.ipynb  U-Net_using_PyTorch_Hub.ipynb
courses/dl_pytorch/week_3/: Classification_Evaluation_Metrics.ipynb  Implementing_LeNet.ipynb  LeNet_with_BatchNorm.ipynb
courses/dl_pytorch/week_4/: Load-Image-Folder-in-DataLoader.ipynb
courses/dl_pytorch/week_6/: Fine_Tuning_and_Transfer_Learning_with_Resnet18.ipynb
courses/dl_pytorch/week_6/intro-to-py-packages/: main_py_file.ipynb
courses/dl_pytorch/week_6/tensorboard-nbs/: Logging_using_Tensorboard.ipynb  Share_TensorBoard_Logs.ipynb  TensorBoard_Dashboard.ipynb  TensorBoard_Overview.ipynb
courses/dl_pytorch/week_6/training_pipeline/: LeNet_MNIST_with_Trainer.ipynb  implementing_lenet_with_trainer.ipynb
courses/dl_pytorch/week_7/: Custom_Dataloader.ipynb  Project2_Kaggle_Competition_Classification.ipynb
courses/dl_pytorch/week_8/: soft_nms.ipynb
courses/dl_pytorch/week_8/opencv-dl-pytorch-week8/faster_rcnn_fine_tuning/: Faster-RCNN-Fine-tuning-Experiment.ipynb  FasterRCNN_Fine-tuning.ipynb
courses/dl_pytorch/week_9/: Nvidia_SSD_PyTorch_Hub.ipynb  RetinaNet_with_Detectron2.ipynb
courses/dl_pytorch/week_9/single-stage-detector/: Single-Stage-Object-Detection.ipynb
installation/: building_instructions.txt  installOpenCVUbuntu18_global.sh  windows.bat
sample_code/Sample-Code-Cpp/: CMakeLists.txt
